			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01am: *********************************

BUG: (11/11/04, SMR) Arraying crashes.
FIX: Array.setNewName() ignores temporary names; Name constructor uses TextUtils.atoi instead of Integer.parseInt.

BUG: (11/11/04, SMR) Mirroring is broken.
FIX: In "Layout.java", fixed computation of new mirroring values.

IMP: (11/10/04, SMR) Added compaction.

IMP: (11/10/04, SMR) Added initial regression tests for I/O.

IMP: (11/10/04, SMR) Added Job.flushBatch() to reset constraints in the middle of a job.

BUG: (11/11/04, GVG) MinAre DRC didn't detect errors in subcells if nodes were not part of exports
FIX: Collect those nodes and check at the end.

BUG: (11/11/04, RK) NCC crashes when a Cell has an Export and global with the same name.

BUG: (11/11/04, DN) Exception in JELIB reader when referenced library not found.
FIX: Check of null pointer in input.JELIB.realizeCellsRecursively .

BUG: (11/11/04, DN) TextUtils.nameSameNumeric may loop infinitely after my previous change.
FIX: Reimplement TextUtils.nameSameNumeric. It is case-sensitive. "nameSameNumeric(s1,s2) == 0" IFF "s1.equals(s2)".

IMP/MAN: (11/10/04, GVG) Scaling factor in 3D view.

IMP: (11/10/04, GVG) Removing one toggle in DRC tab

IMP: (11/10/04, DN) Sorting of objects in JELIB output for regression purposes.
     1) Order of Views : In "nameSameNumeric" order.
     2) Order of CellNames:
	Compare protoName in "nameSameNumeric" order;
	if equal compare views;
	if equal compare versions - implicit (without number) version first,
	   explicit (with number) versions in reverse order then; 
     3) Order of libraries, tools., technologies, primitiveNodes/Ports/Arcs - usual "String.compareTo"
     4) Order of Exports - "nameSameNumeric"
     5) Order of NodeInsts, ArcInsts
        Compare "nameSameNumeric"
	if equal compare indexes in Cell lists;
     6) Order of CellGroups